<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activities_margin"
        android:orientation="vertical"
        >

        <!-- 1st Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_1" />
        <RadioGroup
            android:id="@+id/questions_1"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_1_1"
                style="@style/radio_buttons"
                android:text="@string/answer_1_1" />

            <RadioButton
                android:id="@+id/answer_1_2"
                style="@style/radio_buttons"
                android:text="@string/answer_1_2" />

            <RadioButton
                android:id="@+id/answer_1_3"
                style="@style/radio_buttons"
                android:text="@string/answer_1_3" />

            <RadioButton
                android:id="@+id/answer_1_4"
                style="@style/radio_buttons"
                android:text="@string/answer_1_4" />

        </RadioGroup>


        <!-- 2nd Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_2" />
        <RadioGroup
            android:id="@+id/questions_2"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_2_1"
                style="@style/radio_buttons"
                android:text="@string/answer_2_1" />

            <RadioButton
                android:id="@+id/answer_2_2"
                style="@style/radio_buttons"
                android:text="@string/answer_2_2" />

            <RadioButton
                android:id="@+id/answer_2_3"
                style="@style/radio_buttons"
                android:text="@string/answer_2_3" />

            <RadioButton
                android:id="@+id/answer_2_4"
                style="@style/radio_buttons"
                android:text="@string/answer_2_4" />

        </RadioGroup>

        <!-- 3rd Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_3" />
        <RadioGroup
            android:id="@+id/questions_3"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_3_1"
                style="@style/radio_buttons"
                android:text="@string/answer_3_1" />

            <RadioButton
                android:id="@+id/answer_3_2"
                style="@style/radio_buttons"
                android:text="@string/answer_3_2" />

            <RadioButton
                android:id="@+id/answer_3_3"
                style="@style/radio_buttons"
                android:text="@string/answer_3_3" />

            <RadioButton
                android:id="@+id/answer_3_4"
                style="@style/radio_buttons"
                android:text="@string/answer_3_4" />

        </RadioGroup>

        <!-- 4th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_4" />
        <RadioGroup
            android:id="@+id/questions_4"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_4_1"
                style="@style/radio_buttons"
                android:text="@string/answer_4_1" />

            <RadioButton
                android:id="@+id/answer_4_2"
                style="@style/radio_buttons"
                android:text="@string/answer_4_2" />

            <RadioButton
                android:id="@+id/answer_4_3"
                style="@style/radio_buttons"
                android:text="@string/answer_4_3" />

            <RadioButton
                android:id="@+id/answer_4_4"
                style="@style/radio_buttons"
                android:text="@string/answer_4_4" />

        </RadioGroup>

        <!-- 5th Question -->
        <RadioGroup
            android:id="@+id/questions_7"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_7_1"
                style="@style/radio_buttons"
                android:text="@string/answer_7_1" />

            <RadioButton
                android:id="@+id/answer_7_2"
                style="@style/radio_buttons"
                android:text="@string/answer_7_2" />

            <RadioButton
                android:id="@+id/answer_7_3"
                style="@style/radio_buttons"
                android:text="@string/answer_7_3" />

            <RadioButton
                android:id="@+id/answer_7_4"
                style="@style/radio_buttons"
                android:text="@string/answer_7_4" />

        </RadioGroup>

        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_5" />
        <RadioGroup
            android:id="@+id/questions_5"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_5_1"
                style="@style/radio_buttons"
                android:text="@string/answer_5_1" />

            <RadioButton
                android:id="@+id/answer_5_2"
                style="@style/radio_buttons"
                android:text="@string/answer_5_2" />

            <RadioButton
                android:id="@+id/answer_5_3"
                style="@style/radio_buttons"
                android:text="@string/answer_5_3" />

            <RadioButton
                android:id="@+id/answer_5_4"
                style="@style/radio_buttons"
                android:text="@string/answer_5_4" />

        </RadioGroup>

        <!-- 6th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_6" />
        <RadioGroup
            android:id="@+id/questions_6"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_6_1"
                style="@style/radio_buttons"
                android:text="@string/answer_6_1" />

            <RadioButton
                android:id="@+id/answer_6_2"
                style="@style/radio_buttons"
                android:text="@string/answer_6_2" />

            <RadioButton
                android:id="@+id/answer_6_3"
                style="@style/radio_buttons"
                android:text="@string/answer_6_3" />

            <RadioButton
                android:id="@+id/answer_6_4"
                style="@style/radio_buttons"
                android:text="@string/answer_6_4" />

        </RadioGroup>

        <!-- 7th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_7" />

        <!-- 8th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_8" />
        <RadioGroup
            android:id="@+id/questions_8"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_8_1"
                style="@style/radio_buttons"
                android:text="@string/answer_8_1" />

            <RadioButton
                android:id="@+id/answer_8_2"
                style="@style/radio_buttons"
                android:text="@string/answer_8_2" />

            <RadioButton
                android:id="@+id/answer_8_3"
                style="@style/radio_buttons"
                android:text="@string/answer_8_3" />

            <RadioButton
                android:id="@+id/answer_8_4"
                style="@style/radio_buttons"
                android:text="@string/answer_8_4" />

        </RadioGroup>

        <!-- 9th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_9" />
        <RadioGroup
            android:id="@+id/questions_9"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_9_1"
                style="@style/radio_buttons"
                android:text="@string/answer_9_1" />

            <RadioButton
                android:id="@+id/answer_9_2"
                style="@style/radio_buttons"
                android:text="@string/answer_9_2" />

            <RadioButton
                android:id="@+id/answer_9_3"
                style="@style/radio_buttons"
                android:text="@string/answer_9_3" />

            <RadioButton
                android:id="@+id/answer_9_4"
                style="@style/radio_buttons"
                android:text="@string/answer_9_4" />

        </RadioGroup>

        <!-- 10th Question -->
        <TextView
            style="@style/questions_text_view"
            android:text="@string/question_10" />
        <RadioGroup
            android:id="@+id/questions_10"
            style="@style/radio_groups">

            <RadioButton
                android:id="@+id/answer_10_1"
                style="@style/radio_buttons"
                android:text="@string/answer_10_1" />

            <RadioButton
                android:id="@+id/answer_10_2"
                style="@style/radio_buttons"
                android:text="@string/answer_10_2" />

            <RadioButton
                android:id="@+id/answer_10_3"
                style="@style/radio_buttons"
                android:text="@string/answer_10_3" />

            <RadioButton
                android:id="@+id/answer_10_4"
                style="@style/radio_buttons"
                android:text="@string/answer_10_4" />

        </RadioGroup>

        <Button
            style="@style/custom_button"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"
            android:onClick="submitAnswers"/>

    </LinearLayout>

</ScrollView>